--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -2,3 +2,12 @@ h1 {
 	text-align: center;
 	color: darkgreen;
 }
+
+h2 {
+	text-align: center;
+	color: darkgreen;
+}
+
+a {
+	color: rgb(24, 216, 24);
+}
