--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,3 +1,19 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
+.imgbox {
+	display: grid;
+	height: 100%;
+}
+
+.center-fit {
+	max-width: 100%;
+	max-height: 100%;
+	margin: auto;
+}
+
 html {
 	background-color: rgb(27, 26, 31);
 }
