--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,21 +1,54 @@
-* {
-	margin: 0;
-	padding: 0;
+.banner {
+	width: 100vw;
+	height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	text-align: center;
+	color: white;
+
+	background-image: url('https://luckycloverdev.github.io/src/images/ProfileBG.png');
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
-.imgbox {
-	display: grid;
-	height: 100%;
+.banner h1 {
+	font-size: 5em;
+
+	margin-top: 0;
+	margin-bottom: 0.5em;
 }
 
-.center-fit {
-	max-width: 100%;
-	max-height: 100%;
-	margin: auto;
+.banner .btn {
+	display: block;
+	width: 200px;
+
+	padding: 1em;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+
+	color: white;
+	text-decoration: none;
+	font-size: 1.5em;
+
+	border: 3px solid white;
+	border-radius: 20px;
+
+	background-color: rgba(27, 26, 31, 0.377);
 }
 
 html {
 	background-color: rgb(27, 26, 31);
+}
+
+body {
+	margin: 0;
+	font-family: sans-serif;
 }
 
 h1 {
