--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,6 +1,6 @@
 .banner {
 	width: 100vw;
-	height: 100vh;
+	height: 50vh;
 
 	display: flex;
 	justify-content: center;
@@ -53,7 +53,7 @@ body {
 
 h1 {
 	text-align: center;
-	color: darkgreen;
+	color: white;
 }
 
 h2 {
