--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -7,6 +7,7 @@
 	align-items: center;
 
 	text-align: center;
+	text-shadow: rgba(27, 26, 31, 0.377);
 	color: white;
 
 	background-image: url('/src/images/ProfileBG.png');
