--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -7,7 +7,8 @@
 	align-items: center;
 
 	text-align: center;
-	text-shadow: rgba(27, 26, 31, 0.377);
+	text-shadow: 1px 1px 1px rgba(27, 26, 31),
+					-1px -1px 1px rgba(27, 26, 31);
 	color: white;
 
 	background-image: url('/src/images/ProfileBG.png');
