--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -39,8 +39,8 @@
 
 	padding: 0.5em;
 	margin-top: 25px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 1em;
+	margin-right: 1em;
 
 	color: white;
 	text-decoration: none;
