--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,5 +1,7 @@
 .navbar {
 	background-color: rgba(27, 26, 31);
+	align-items: center;
+	justify-content: right;
 	overflow: hidden;
 }
 
@@ -7,7 +9,8 @@
 	float: right;
 	color: white;
 	text-align: center;
-	padding: 0.5em;
+	padding: 2em;
+	margin-right: 1em;
 	text-decoration: none;
 	font-size: 1em;
 }
