--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -9,7 +9,8 @@
 	float: right;
 	color: white;
 	text-align: center;
-	padding: 2em;
+	padding-right: 1em;
+	padding-top: 0.5em;
 	margin-right: 1em;
 	text-decoration: none;
 	font-size: 1em;
