--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -11,6 +11,8 @@
 	text-align: center;
 	padding-right: 1em;
 	padding-top: 0.5em;
+	padding-left: 1em;
+	padding-bottom: 0.5em;
 	text-decoration: none;
 	font-size: 1em;
 }
