--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -3,6 +3,10 @@
 	align-items: center;
 	justify-content: right;
 	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
 
 .navbar a {
