--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -92,11 +92,13 @@
 .page-content {
 	width: 80vw;
 	align-items: center;
+	justify-self: center;
 	justify-content: left;
 }
 
 .page-content h2 {
 	color: white;
+	justify-content: left;
 }
 
 html {
