Added new banner for studio page

--- a/src/css/studio-style.css
+++ b/src/css/studio-style.css
@@ -44,7 +44,7 @@
 					-1px -1px 1px rgba(27, 26, 31);
 	color: white;
 
-	background-image: url('/src/images/ProfileBG.png');
+	background-image: url('/src/images/Housefire-White-Banner.png');
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
