--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -91,6 +91,9 @@
 
 .main-section {
 	background-image: linear-gradient(to upper left, rgb(12, 72, 12), black);
+	
+	width: 100vw;
+	height: max-content;
 }
 
 .page-content {
