--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -93,7 +93,9 @@
 	background-image: linear-gradient(45deg, rgb(12, 72, 12), black);
 	
 	width: 100vw;
-	height: max-content;
+
+	display: flex;
+	flex-direction: column;
 }
 
 .page-content {
