--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -111,7 +111,7 @@
 }
 
 html {
-	background-color: rgb(27, 26, 31);
+	background-image: linear-gradient(45deg, rgb(12, 72, 12), black);
 }
 
 body {
