--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -93,9 +93,7 @@
 	background-image: linear-gradient(45deg, rgb(12, 72, 12), black);
 	
 	width: 100vw;
-
-	display: flex;
-	flex-direction: column;
+	height: auto;
 }
 
 .page-content {
@@ -111,7 +109,7 @@
 }
 
 html {
-	background-image: linear-gradient(45deg, rgb(12, 72, 12), black);
+	background-color:black;
 }
 
 body {
