--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,3 +1,13 @@
+*, *::before, *::after {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
 .navbar {
 	background-color: rgba(27, 26, 31);
 	align-items: center;
@@ -44,7 +54,7 @@
 					-1px -1px 1px rgba(27, 26, 31);
 	color: white;
 
-	background-image: url('/src/images/ProfileBG.png');
+	background-image: url('/CloverWeb/src/images/ProfileBG.png');
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -90,10 +100,31 @@
 }
 
 .main-section {
-	background-image: linear-gradient(45deg, rgb(3, 39, 3), black);
+	background-image: linear-gradient(135deg, rgb(3, 39, 3), black, rgb(3, 39, 3));
 	
 	width: 100vw;
-	height: auto;
+	height: 100vw;
+
+	padding-top: 0%;
+}
+
+.main-section .h1 {
+	height: 100%;
+	width: 100%;
+}
+
+.fade-in {
+	opacity: 0;
+	transform: translateY(20vh);
+	visibility: hidden;
+	transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+	will-change: opacity, visibility;
+}
+
+.fade-in .is-visible {
+	opacity: 1;
+	transform: none;
+	visibility: visible;
 }
 
 .page-content {
