--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -50,9 +50,9 @@
 	align-items: center;
 
 	text-align: center;
-	text-shadow: 1px 1px 1px rgba(27, 26, 31),
-					-1px -1px 1px rgba(27, 26, 31);
-	color: white;
+	text-shadow: 1px 1px 2px rgb(255, 0, 255),
+					-1px -1px 2px rgb(0, 255, 255);
+	color: rgba(255, 255, 255, 0.9);
 
 	background-image: url('/CloverWeb/src/images/ProfileBG.png');
 	background-size: cover;
@@ -76,6 +76,8 @@
 .banner h1 {
 	font-size: 5em;
 
+	color: rgba(255, 255, 255, 0.9);
+
 	margin-top: 0;
 	margin-bottom: 0.25em;
 }
@@ -85,18 +87,20 @@
 	width: 125px;
 
 	padding: 1em;
-	margin-top: 25px;
+	margin-top: 0.5em;
 	margin-left: 0.5em;
 	margin-right: 0.5em;
 
-	color: white;
+	color: rgba(255, 255, 255, 0.9);
 	text-decoration: none;
 	font-size: 1em;
 
 	border: 3px solid white;
-	border-radius: 20px;
+	border-radius: 2000px;
 
 	background-color: rgba(27, 26, 31, 0.63);
+
+	transition: 0.2s;
 }
 
 .main-section {
