--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,6 +1,9 @@
 *, *::before, *::after {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	overflow-x: hidden;
+	text-shadow: 1px 1px 2px rgb(255, 0, 255),
+					-1px -1px 2px rgb(0, 255, 255);
+	color: rgba(255, 255, 255, 0.9);
 }
 
 ::-webkit-scrollbar {
@@ -104,7 +107,7 @@
 }
 
 .main-section {
-	background-image: linear-gradient(135deg, rgb(3, 39, 3), black, rgb(3, 39, 3));
+	background: linear-gradient(135deg, rgb(3, 39, 3), black, rgb(3, 39, 3));
 	
 	width: 100vw;
 	height: 100vw;
@@ -117,18 +120,71 @@
 	width: 100%;
 }
 
-.fade-in {
-	opacity: 0;
-	transform: translateY(20vh);
-	visibility: hidden;
-	transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-	will-change: opacity, visibility;
+.tablist {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, 50%);
+	width: 500px;
+	height: 250px;
+	background: #5F5F5F;
+	padding: 20px 30px;
+	overflow: hidden;
+	border-radius: 50px;
+	box-shadow: 5px 10px 5px #2F2F2F;
 }
 
-.fade-in .is-visible {
+.tablist .tab-header {
+	height: 60px;
+	display: flex;
+	align-items: center;
+}
+
+.tablist .tab-header > div {
+	width: calc(100% / 4);
+	text-align: center;
+	color: white;
+	font-weight: 800;
+	cursor: pointer;
+	font-size: 14px;
+	text-transform: uppercase;
+	outline: none;
+}
+
+.tablist .tab-header > div.active {
+	color: #2F2F2F;
+}
+
+.tablist .tab-indicator {
+	position: relative;
+	width: calc(100% / 4);
+	height: 5px;
+	background: #2F2F2F;
+	left: 0px;
+	border-radius: 5px;
+	transition: all 500ms ease-in-out;
+}
+
+.tablist .tab-body {
+	position: relative;
+	height: calc(100% - 60px);
+	padding: 10px 5px;
+}
+
+.tablist .tab-body > div {
+	position: absolute;
+	top: -200%;
+	opacity: 0;
+	margin-top: 5px;
+	transform: scale(0.9);
+	transition: opacity 500ms ease-in-out 0ms, transform 500ms ease-in-out 0ms;
+}
+
+.tablist .tab-body > div.active {
+	top: 0;
 	opacity: 1;
-	transform: none;
-	visibility: visible;
+	transform: scale(1);
+	margin-top: 0px;
 }
 
 .page-content {
@@ -148,8 +204,45 @@ html {
 }
 
 body {
+	--nav-load-time: 300ms;
+	--nav-link-load-time: 300ms;
 	margin: 0;
 	font-family: sans-serif;
+}
+
+nav {
+	align-items: center;
+	justify-content: right;
+	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.95);
+	color: white;
+}
+
+nav ul {
+	margin: 0;
+	display: flex;
+	justify-content: right;
+}
+
+nav li {
+	list-style: none;
+	padding: 10px;
+	margin: 0 10px;
+	transition: 0.2s;
+}
+
+nav li:hover {
+	/* background-color: rgba(120, 220, 175, 0.75); */
+	color: black;
+}
+
+nav a {
+	color: inherit;
+	text-decoration: none;
 }
 
 h1 {
@@ -164,4 +257,33 @@ h2 {
 
 a {
 	color: rgb(24, 216, 24);
+}
+
+#preloader {
+	background-color: black;
+	height: 100vh;
+	width: 100%;
+	position: fixed;
+	z-index: 100;
+}
+
+#load-animation {
+	background-color: rgb(24, 216, 24);
+	height: 25vh;
+	width: 25vh;
+	border-radius: 50%;
+	animation: load-anim 2s ease-in-out infinite;
+	z-index: 101;
+}
+
+@keyframes load-anim {
+	0% {
+		transform: translateX(-50vh);
+	}
+	50% {
+		transform: translateX(200vh);
+	}
+	100% {
+		transform: translateX(200vh);
+	}
 }
