--- a/src/css/stylemain.css
+++ b/src/css/stylemain.css
@@ -1,9 +1,10 @@
 *, *::before, *::after {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	overflow-x: hidden;
-	text-shadow: 1px 1px 2px rgb(255, 0, 255),
-					-1px -1px 2px rgb(0, 255, 255);
-	color: rgba(255, 255, 255, 0.9);
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
 }
 
 ::-webkit-scrollbar {
@@ -11,279 +12,105 @@
     background: transparent;
 }
 
-.navbar {
-	background-color: rgba(27, 26, 31);
-	align-items: center;
-	justify-content: right;
-	overflow: hidden;
-	position: fixed;
-	width: 100%;
-	top: 0;
-	left: 0;
-}
-
-.navbar a {
-	float: right;
-	color: white;
-	text-align: center;
-	padding-right: 1em;
-	padding-top: 0.5em;
-	padding-left: 1em;
-	padding-bottom: 0.5em;
-	text-decoration: none;
-	font-size: 1em;
-}
-
-.navbar a:hover {
-	background-color: darkgreen;
-	color: greenyellow;
-}
-
-.navbar a.active {
-	background-color: lightgreen;
-	color: darkgreen;
-}
-
-.banner {
-	width: 100vw;
-	height: 50vh;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	text-align: center;
-	text-shadow: 1px 1px 2px rgb(255, 0, 255),
-					-1px -1px 2px rgb(0, 255, 255);
-	color: rgba(255, 255, 255, 0.9);
-
-	background-image: url('/CloverWeb/src/images/ProfileBG.png');
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-}
-
-.banner a:hover {
-	background-color: rgba(21, 197, 118, 0.63);
-}
-
-.banner .btn-line {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 1em;
-}
-
-.banner h1 {
-	font-size: 5em;
-
-	color: rgba(255, 255, 255, 0.9);
-
-	margin-top: 0;
-	margin-bottom: 0.25em;
-}
-
-.banner .btn {
-	display: block;
-	width: 125px;
-
-	padding: 1em;
-	margin-top: 0.5em;
-	margin-left: 0.5em;
-	margin-right: 0.5em;
-
-	color: rgba(255, 255, 255, 0.9);
-	text-decoration: none;
-	font-size: 1em;
-
-	border: 3px solid white;
-	border-radius: 2000px;
-
-	background-color: rgba(27, 26, 31, 0.63);
-
-	transition: 0.2s;
-}
-
-.main-section {
-	background: linear-gradient(135deg, rgb(3, 39, 3), black, rgb(3, 39, 3));
-	
-	width: 100vw;
-	height: 100vw;
-
-	padding-top: 0%;
-}
-
-.main-section .h1 {
-	height: 100%;
-	width: 100%;
-}
-
-.tablist {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, 50%);
-	width: 500px;
-	height: 250px;
-	background: #5F5F5F;
-	padding: 20px 30px;
-	overflow: hidden;
-	border-radius: 50px;
-	box-shadow: 5px 10px 5px #2F2F2F;
-}
-
-.tablist .tab-header {
-	height: 60px;
-	display: flex;
-	align-items: center;
-}
-
-.tablist .tab-header > div {
-	width: calc(100% / 4);
-	text-align: center;
-	color: white;
-	font-weight: 800;
-	cursor: pointer;
-	font-size: 14px;
-	text-transform: uppercase;
-	outline: none;
-}
-
-.tablist .tab-header > div.active {
-	color: #2F2F2F;
-}
-
-.tablist .tab-indicator {
-	position: relative;
-	width: calc(100% / 4);
-	height: 5px;
-	background: #2F2F2F;
-	left: 0px;
-	border-radius: 5px;
-	transition: all 500ms ease-in-out;
-}
-
-.tablist .tab-body {
-	position: relative;
-	height: calc(100% - 60px);
-	padding: 10px 5px;
-}
-
-.tablist .tab-body > div {
-	position: absolute;
-	top: -200%;
-	opacity: 0;
-	margin-top: 5px;
-	transform: scale(0.9);
-	transition: opacity 500ms ease-in-out 0ms, transform 500ms ease-in-out 0ms;
-}
-
-.tablist .tab-body > div.active {
-	top: 0;
-	opacity: 1;
-	transform: scale(1);
-	margin-top: 0px;
-}
-
-.page-content {
-	margin: auto;
-	width: 50vw;
-	justify-content: left;
-	text-align: left;
-}
-
-.page-content h3 {
-	color: white;
-	justify-content: left;
-}
-
-html {
-	background-color:black;
+:root {
+	--color-green-0: #cfff70;
+	--color-green-1: #8fde5d;
+	--color-green-2: #3ca370;
+	--color-green-3: #3d6e70;
+	--color-green-4: #323e4f;
+	--color-grey-0: #ffffeb;
+	--color-grey-1: #c2c2d1;
+	--color-grey-2: #7e7e8f;
+	--color-grey-3: #606070;
+	--color-grey-4: #43434f;
+	--color-grey-5: #272736;
+	--color-brown-0: #ffe478;
+	--color-brown-1: #f2a65e;
+	--color-brown-2: #ba6156;
+	--color-brown-3: #8c3f5d;
+	--color-brown-4: #5e315b;
 }
 
 body {
-	--nav-load-time: 300ms;
-	--nav-link-load-time: 300ms;
-	margin: 0;
-	font-family: sans-serif;
-}
-
-nav {
-	align-items: center;
-	justify-content: right;
+	background-image: url("/src/images/Background.png");
+	background-repeat: repeat;
+	background-attachment: fixed;
+	font-size: 1rem;
+	font-family: 'Source Sans Pro', sans-serif;
+	color: var(--color-green-4);
+	transition: all 0.4s ease-in-out;
 	overflow: hidden;
-	position: fixed;
-	width: 100%;
-	top: 0;
-	left: 0;
-	background-color: rgba(0, 0, 0, 0.95);
-	color: white;
-}
-
-nav ul {
-	margin: 0;
-	display: flex;
-	justify-content: right;
-}
-
-nav li {
-	list-style: none;
-	padding: 10px;
-	margin: 0 10px;
-	transition: 0.2s;
-}
-
-nav li:hover {
-	/* background-color: rgba(120, 220, 175, 0.75); */
-	color: black;
-}
-
-nav a {
-	color: inherit;
-	text-decoration: none;
-}
-
-h1 {
-	text-align: center;
-	color: white;
-}
-
-h2 {
-	text-align: center;
-	color: darkgreen;
 }
 
 a {
-	color: rgb(24, 216, 24);
+	display: inline-block;
+	text-decoration: none;
+	color: inherit;
+	font-family: inherit;
 }
 
-#preloader {
-	background-color: black;
-	height: 100vh;
+header {
 	width: 100%;
-	position: fixed;
-	z-index: 100;
+	padding-top: 4vh;
+	padding-bottom: 4vh;
+	background-color: var(--color-green-2);
+	color: var(--color-green-0);
+	justify-content: center;
+	align-content: center;
+	vertical-align: middle;
+	text-align: center;
 }
 
-#load-animation {
-	background-color: rgb(24, 216, 24);
-	height: 25vh;
-	width: 25vh;
-	border-radius: 50%;
-	animation: load-anim 2s ease-in-out infinite;
-	z-index: 101;
+.site-content {
+	color: var(--color-green-1);
+	width: 100%;
+	height: 100vh;
+	padding-top: 4vh;
+	padding-bottom: 4vh;
+	text-align: center;
+	margin: auto;
 }
 
-@keyframes load-anim {
-	0% {
-		transform: translateX(-50vh);
-	}
-	50% {
-		transform: translateX(200vh);
-	}
-	100% {
-		transform: translateX(200vh);
-	}
+footer {
+	width: 100%;
+	padding-top: 4vh;
+	padding-bottom: 4vh;
+	background-color: var(--color-green-2);
+	color: var(--color-green-0);
+	justify-content: center;
+	align-content: center;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.navbar {
+	text-align: center;
+	display: flex;
+}
+
+.navbar a {
+	margin-left: 1vh;
+	margin-right: 1vh;
+}
+
+.navbar a:hover {
+	color: var(--color-green-0);
+	margin-left: 1vh;
+	margin-right: 1vh;
+}
+
+a:hover {
+	color: var(--color-green-0);
+}
+
+h1 {
+	color: var(--color-grey-0);
+}
+
+h2 {
+	color: var(--color-grey-1);
+}
+
+h3 {
+	color: var(--color-grey-2);
 }
